<resources>
    <string name="app_name">简阅</string>
    <string name="MainText">欢迎使用简阅</string>
    <string name="MinText">一款专注短篇阅读的APP</string>
    <string name="GuideText">为了让您更好的阅读您喜欢的文章，我们将收集您的兴趣标签</string>
    <string name="LableText">请选择您的兴趣</string>
    <string name="LableText_MeiWen">美文</string>
    <string name="LableText_QinGan">情感</string>
    <string name="LableText_ZhenTan">侦探</string>
    <string name="LableText_LiShi">历史</string>
    <string name="LableText_LiZhi">励志</string>
    <string name="LableText_YouMo">幽默</string>
    <string name="TextFinish">全文完</string>
    <string name="Suggest_text">请输入您的建议....</string>
    <string name="sure">提交</string>
    <!--<string name="LableText_JiShi">记事</string>-->
    <string name="LableText_HuanYin">祝您阅读愉快</string>
    <string name="CeBianLan_title">兴趣标签</string>
    <string name="flash">Flash</string>
    <string name="ZiHao">字号</string>
    <string name="BeiJin">背景</string>
    <string name="YeJian">夜间</string>
    <string name="share">分享</string>
    <string name="favorite">收藏夹</string>
    <string name="suggest">意见反馈</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
</resources>
