<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:background="#FFFFFF"
        android:text="@string/share"
        android:textSize="22sp"/>
    <Button
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:background="#FFFFFF"
        android:text="@string/favorite"
        android:textSize="22sp"/>
    <Button
        android:id="@+id/suggest"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:background="#FFFFFF"
        android:text="@string/suggest"
        android:textSize="22sp"/>
    <Button
        android:id="@+id/none"
        android:layout_width="match_parent"
        android:layout_height="13sp"
        android:background="#FFFFFF" />

</LinearLayout>
