<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:text="nsud"/>
            </LinearLayout>
        </ScrollView>


    </android.support.constraint.ConstraintLayout >

    <LinearLayout
        android:layout_width="240sp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="#dcdee0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CeBianLan_title"
            android:maxLines="1"
            android:textColor="#171c21"
            android:layout_marginTop="30sp"
            android:textSize="33sp"
            android:gravity="center_horizontal"/>
        <CheckBox
            android:id="@+id/MeiWen1"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_MeiWen"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/QinGan1"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_QinGan"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/YouMo1"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_YouMo"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/ZhenTan1"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_ZhenTan"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/LiShi1"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_LiShi"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/LiZhi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_marginLeft="20sp"
            android:textColor="#171c21"
            android:paddingLeft="120sp"
            style="@style/check_box"
            android:text="@string/LableText_LiZhi"
            android:layout_marginBottom="10sp"/>
        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#171c21"
            android:text="更多设置"
            android:layout_marginLeft="60sp"
            android:textSize="30sp" />
    </LinearLayout>



</android.support.v4.widget.DrawerLayout>

