<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.com.jianyue.reader_activity.Read_activity.Bottom_list.SuggestActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/frameLayout">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/suggest"
                android:textSize="20sp"
                android:textColor="@color/nightBack"/>
    </FrameLayout>

    <com.kingja.supershapeview.SuperShapeEditText
        android:id="@+id/SuggestText"
        android:layout_width="330sp"
        android:layout_height="150sp"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:gravity="top"
        android:hint="@string/Suggest_text"
        android:padding="12dp"
        android:textColor="@color/nightBack"
        app:super_cornerRadius="10dp"
        app:super_strokeColor="#88c2fc"
        app:super_strokeWidth="2dp" />

    <com.kingja.supershapeview.SuperShapeTextView
        android:id="@+id/Send"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_alignStart="@+id/SuggestText"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sure"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        app:super_cornerRadius="56dp"
        app:super_solidColor="#0ca6f9" />
</RelativeLayout>
